--- a/styles.css
+++ b/styles.css
@@ -44,9 +44,13 @@ body {
 .header {
     background: linear-gradient(135deg, #7b9aaf, #314c5f);
     color: white;
-    padding: 30px;
+    padding: 14px;
     text-align: center;
     position: relative;
+
+    &img{
+        width: 70%;
+    }
 }
 
 .progress-bar {
